updating app prop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 
+
+# file db
+spring.datasource.url=jdbc:h2:file:./database/filedb
+
+# memory db
+#spring.datasource.url=jdbc:h2:mem:memdb
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# update create create-drop validate
+spring.jpa.hibernate.ddl-auto=update
+
+# Port
+server.port=8090
