fixed changed to username instead of email

--- a/UserAuth/src/main/resources/application.properties
+++ b/UserAuth/src/main/resources/application.properties
@@ -16,5 +16,9 @@ spring.jpa.hibernate.ddl-auto=update
 # Port
 server.port=8090
 
+# for access db from web
+# jdbc:h2:file:/home/sigge/code/java/portfolio-backend/database/filedb
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 
