picture module, impl get picture and add / update user pictures

--- a/Picture/src/main/resources/application.properties
+++ b/Picture/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 # file db
-spring.datasource.url=jdbc:h2:file:./database/users
+spring.datasource.url=jdbc:h2:file:./database/pictures
 
 # memory db
 #spring.datasource.url=jdbc:h2:mem:memdb
@@ -14,10 +14,10 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 # Port
-server.port=8090
+server.port=8091
 
 # for access db from web
-# jdbc:h2:file:/home/sigge/code/java/portfolio-backend/database/users
+# jdbc:h2:file:/home/sigge/code/java/portfolio-backend/database/pictures
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
