--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <url>http://www.example.com</url>
   <modules>
     <module>UserAuth</module>
+      <module>Picture</module>
   </modules>
 
   <properties>
