--- a/UserAuth/src/main/resources/application.properties
+++ b/UserAuth/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 
+## file upload
+spring.servlet.multipart.max-file-size=10240MB
+spring.servlet.multipart.max-request-size=10240MB
+spring.servlet.multipart.enabled=true
