--- a/Post/pom.xml
+++ b/Post/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.siggebig</groupId>
         <artifactId>my-app</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>Post</artifactId>
